Fix touch on ios

--- a/src/ui/settings.css
+++ b/src/ui/settings.css
@@ -3,6 +3,7 @@
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
+  overflow: hidden;
 }
 #settings .toggle {
   padding: 12px 6px;
